# image-service

./: .dockerignore  .gitignore  Dockerfile  ImageService.proto  Makefile  README.md  client.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
