[tool.poetry]
name = "image-service"
version = "0.1.0"
description = ""
authors = ["@WesleyBatistaS"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.27.2"
google-api-core = "^1.16.0"
flask = "^1.1.1"
protobuf = "^3.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
